整理文档